# siphyy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy-demo.yml  release.yml
ai-learning/fleet_ops/: tyre_inspector.py
ai-learning/gradio-playground/: 05_tyre_inspector_ui.py  06_rag_experiment.py  README.md  requirements.txt
ai-learning/gradio-playground/kb/: tyre_safety_handbook.md
ai-learning/production_rag_practice/: 01_chunking_naive_vs_paragraph.py
apps/demo/: Dockerfile  README.md  app.py  requirements.txt
apps/demo/data/: sample_trakzee.json  sample_trakzee.xlsx
docs/: index.md  siphyy-architecture-report.html  writing-adapters.md
docs/about/: changelog.md  contributing.md  license.md  releasing.md
docs/concepts/: architecture.md  canonical-schema.md  case-base.md  index.md  tier-1-vs-tier-2.md
docs/how-to/: add-a-new-provider.md  deploy-the-demo.md  handle-slope-effects.md  index.md  use-anthropic.md
docs/reference/: adapters.md  agents.md  detectors.md  index.md  schema.md
docs/tutorial/: first-pipeline.md  index.md  install.md  using-an-llm-client.md  writing-a-detector.md  writing-an-adapter.md
examples/: quickstart.py  trakzee_demo.py
fleet-knowledge-mcp/: .gitignore  README.md  fleet_knowledge_server.py  requirements.txt
fleet-knowledge-mcp/knowledge_base/: breakdown_recovery_protocol.md  electrical_diagnostic.md  engine_overheating_response.md  fuel_efficiency_tips.md  fuel_injector_diagnostic.md  fuel_theft_prevention.md  postmortem_KCA891H_tyre_2026.md  scheduled_maintenance_intervals.md  tyre_replacement_procedure.md
fleet-maintenance-mcp/: .gitignore  README.md  fleet_maintenance_server.py  mock_data.py
fleet-mcp/: .gitignore  README.md  fleet_mcp_server.py  mock_data.py
src/siphyy/: __init__.py
src/siphyy/adapters/: __init__.py  base.py  samsara_stats.py  samsara_webhook.py  trakzee.py
src/siphyy/agents/: __init__.py  anthropic_client.py  base.py  fuel_anomaly.py  openai_client.py
src/siphyy/detectors/: __init__.py  base.py  fuel_siphonage.py
src/siphyy/knowledge/: __init__.py  seed_cases.py
src/siphyy/schema/: __init__.py  canonical.py  case.py  interesting.py
tests/: conftest.py  test_agent_base.py  test_anthropic_client.py  test_canonical_schema.py  test_case_base.py  test_case_retrieval.py  test_fuel_anomaly_agent.py  test_fuel_siphonage_detector.py  test_interesting_schema.py  test_openai_client.py  test_samsara_siphonage_integration.py  test_samsara_stats_adapter.py  test_samsara_webhook_adapter.py  test_state_store.py  test_trakzee_adapter.py
tests/fixtures/: samsara_stats_history.json  samsara_webhooks.json
tests/integration/: test_llm_clients.py
