[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siphyy"
version = "0.1.0"
description = "Open-source agentic framework for fleet telematics analytics, fuel anomaly detection, and predictive maintenance."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Surajit Das", email = "you@example.com" },
]
keywords = ["fleet", "telematics", "llm", "rag", "agentic", "siphonage", "maintenance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Adapters that bring their own transport/parsing deps.
trakzee = ["pandas>=2.2", "openpyxl>=3.1"]
samsara = ["httpx>=0.27"]

# LLM and embeddings — kept optional so the framework runs without API keys
# for Tier 1 detection only.
llm = ["anthropic>=0.34", "openai>=1.40"]

# pgvector / production storage
storage = ["psycopg[binary]>=3.1", "sqlalchemy>=2.0"]

# Development tooling. Run: uv pip install -e ".[dev]"
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/siphyy/siphyy-core"
Documentation = "https://github.com/siphyy/siphyy-core#readme"
Repository = "https://github.com/siphyy/siphyy-core"
Issues = "https://github.com/siphyy/siphyy-core/issues"

[project.scripts]
siphyy = "siphyy.cli:main"

# ----------------------------------------------------------------------
# Tool configurations
# ----------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/siphyy"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=siphyy",
    "--cov-report=term-missing",
]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/siphyy"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
